--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {
   font-size: 20px;
 }
 
+.services {
+  margin-bottom: 100px;
+}
+
 .container {
   text-align: center;
 }
@@ -18,6 +22,8 @@ body {
 
 .title p {
   font-family: 'Courgette', cursive;
+  font-size: 18px;
+  color: grey;
 }
 
 /* Introduction */
@@ -69,18 +75,18 @@ h3 {
 }
 
 .list {
-  list-style-type: none;
+  text-align: end;
 }
 
 .list-item {
-  float: left;
+  list-style-type: none;
+  display: inline-block;
   padding-right: 30px;
 }
 
 .list-item a {
   color: white;
   text-decoration: none;
-  text-align: left;
   text-transform: uppercase;
 }
 
@@ -96,12 +102,74 @@ i {
 
 .fas {
   line-height: 95px;
-  text-align: center;
 }
 
 .col-4 h5 {
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+
+/* Portfolio */
+.portfolio {
+  background-color: #f5efef;
+}
+
+.gallery {
+  background-color: white;
+}
+
+.gallery img {
+  object-fit: cover;
+  height: 40vh;
+  width: 100%;
+}
+
+.gallery-item {
+  text-align: center;
+}
+
+.card-title {
+  margin-bottom: 0;
+}
+
+.card-text {
+  margin-top: 0;
+  margin-bottom: 50px;
+  padding-bottom: 25px;
+  font-family: 'Courgette', cursive;
+  font-size: 17px;
+  color: grey;
+}
+
+/* Footer */
+.icons {
+  padding-left: 70px;
+  text-align: start;
+}
+
+.icons li {
+  font-size: 0;
+  list-style-type: none;
+  display: inline-block;
+}
+
+.icons i {
+  font-size: 20px;
+  color: white;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.fab {
+  text-align: center;
+  line-height: 2;
+}
+
+.copyright {
+  padding-top: 20px;
   font-size: 16px;
 }
 /*# sourceMappingURL=style.css.map */
