--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Variables */
+/* Global */
 body {
   font-size: 20px;
 }
@@ -17,16 +19,16 @@ body {
 .title h2, .col-4 h5 {
   text-transform: uppercase;
   font-size: 30px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .title p {
-  font-family: 'Courgette', cursive;
+  font-family: "Courgette", cursive;
   font-size: 18px;
   color: grey;
 }
 
-/* Introduction */
+/* Header */
 .intro {
   background-image: url(../images/photo1.jpeg);
   height: 100vh;
@@ -45,14 +47,14 @@ body {
   color: white;
   font-size: 80px;
   text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .intro-inner h4 {
   color: white;
   font-size: 40px;
   text-transform: capitalize;
-  font-family: 'Courgette', cursive;
+  font-family: "Courgette", cursive;
 }
 
 .btn {
@@ -65,10 +67,10 @@ body {
   text-decoration: none;
   padding: 16px 25px;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-h3 {
+.col-2 h3 {
   color: #fbc02a;
   font-family: 'Lobster', cursive;
   letter-spacing: 3px;
@@ -106,7 +108,7 @@ i {
 
 .col-4 h5 {
   text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
 }
 
@@ -137,7 +139,7 @@ i {
   margin-top: 0;
   margin-bottom: 50px;
   padding-bottom: 25px;
-  font-family: 'Courgette', cursive;
+  font-family: "Courgette", cursive;
   font-size: 17px;
   color: grey;
 }
