--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,13 @@
+/* Variables */
+
+$font-header: 'Roboto', sans-serif;
+$font-text: 'Courgette', cursive;
+
+$color-main: white;
+$color-second: rgb(251, 192, 42); 
+$color-text: grey;
+
+/* Global */
 
 body {
     font-size: 20px;
@@ -18,16 +28,16 @@ body {
 .title h2, .col-4 h5 {
     text-transform: uppercase;
     font-size: 30px;
-    font-family: 'Roboto', sans-serif; 
+    font-family: $font-header; 
 }
 
 .title p {
-    font-family: 'Courgette', cursive;
+    font-family: $font-text;
     font-size: 18px;
-    color: grey;
+    color: $color-text;
 }
 
-/* Introduction */
+/* Header */
 
 .intro {
     background-image: url(../images/photo1.jpeg);
@@ -43,34 +53,34 @@ body {
 }
 
 .intro-inner h1 {
-    color: white;
+    color: $color-main;
     font-size: 80px;
     text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-header;
 }
 
 .intro-inner h4 {
-    color: white;
+    color: $color-main;
     font-size: 40px;
     text-transform: capitalize;
-    font-family: 'Courgette', cursive;
+    font-family: $font-text;
 }
 
 .btn {
     border-style: solid;
-    border-color: rgb(251, 192, 42);
-    background-color: rgb(251, 192, 42);
+    border-color: $color-second;
+    background-color: $color-second;
     border-radius: 5px;
-    color: white;
+    color: $color-main;
     text-transform: uppercase;
     text-decoration: none;
     padding: 16px 25px;
     font-size: 16px;
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-header;
 }
 
-h3 {
-    color: rgb(251, 192, 42);
+.col-2 h3 {
+    color: $color-second;
     font-family: 'Lobster', cursive;
     letter-spacing: 3px;
 }
@@ -85,7 +95,7 @@ h3 {
     padding-right: 30px;
 }
 .list-item a {
-    color: white;
+    color: $color-main;
     text-decoration: none;
     text-transform: uppercase;
 }
@@ -94,7 +104,7 @@ h3 {
 
 i {
     font-size: 60px;
-    color: rgb(251, 192, 42);
+    color: $color-second;
     height: 100px;
     width: 100px;
     border: solid;
@@ -107,7 +117,7 @@ i {
 
 .col-4 h5 {
     text-transform: uppercase;
-    font-family: 'Roboto', sans-serif; 
+    font-family: $font-header; 
     font-size: 16px;
 }
 
@@ -118,7 +128,7 @@ i {
 }
 
 .gallery {
-    background-color: white;
+    background-color: $color-main;
 }
 
 .gallery img {
@@ -139,9 +149,9 @@ i {
     margin-top: 0;
     margin-bottom: 50px;
     padding-bottom: 25px;
-    font-family: 'Courgette', cursive;
+    font-family: $font-text;
     font-size: 17px;
-    color: grey;
+    color: $color-text;
 }
 
 /* Footer */
@@ -159,7 +169,7 @@ i {
 
 .icons i {
     font-size: 20px;
-    color: white;
+    color: $color-main;
     height: 50px;
     width: 50px;
     border-radius: 50%;
