--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,16 @@ body {
   height: 100vh;
   background-size: cover;
   position: relative;
+  background-attachment: fixed;
+  background-position: center center;
 }
 
 .intro-inner {
   position: absolute;
   width: 100%;
-  text-align: center;
-  top: 40%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .intro-inner h1 {
@@ -70,7 +73,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.col-2 h3 {
+.logo {
   color: #fbc02a;
   font-family: 'Lobster', cursive;
   letter-spacing: 3px;
